--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Do not remove or rename entries in this file, only add new ones
-# See https://github.com/flutter/flutter/issues/128635 for more context.
+# 不要删除或重命名此文件中的条目，只添加新条目
+# 有关更多上下文，请参见 https://github.com/flutter/flutter/issues/128635
 
-# Miscellaneous
+# 杂项
 *.class
 *.lock
 *.log
@@ -13,19 +13,19 @@
 .history
 .svn/
 
-# IntelliJ related
+# IntelliJ 相关
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# Visual Studio Code related
+# Visual Studio Code 相关
 .classpath
 .project
 .settings/
 .vscode/*
 
-# Flutter repo-specific
+# Flutter 特定
 /bin/cache/
 /bin/internal/bootstrap.bat
 /bin/internal/bootstrap.sh
@@ -45,10 +45,10 @@
 version
 analysis_benchmark.json
 
-# packages file containing multi-root paths
+# packages 文件包含多根路径
 .packages.generated
 
-# Flutter/Dart/Pub related
+# Flutter/Dart/Pub 相关
 **/doc/api/
 .dart_tool/
 .flutter-plugins
@@ -64,7 +64,7 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
-# Android related
+# Android 相关
 **/android/**/gradle-wrapper.jar
 .gradle/
 **/android/captures/
@@ -75,7 +75,7 @@ unlinked_spec.ds
 **/android/key.properties
 *.jks
 
-# iOS/XCode related
+# iOS/XCode 相关
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
@@ -122,13 +122,13 @@ unlinked_spec.ds
 **/linux/flutter/generated_plugin_registrant.h
 **/linux/flutter/generated_plugins.cmake
 
-# Coverage
+# 覆盖
 coverage/
 
-# Symbols
+# 符号
 app.*.symbols
 
-# Exceptions to above rules.
+# 以上规则的异常。
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
